@@ -1,7 +1,14 @@
 2015-06-30 Martin Grønholdt
 
-* debuc.c (db_dealloc): Added check for empty entry in the alloc list.
-* http.h: Upped version.
+* debug.c (db_dealloc): Added check for empty entry in the alloc list.
+* slighttp/http.h: Upped version.
+* response_handlers.h: Added rest_network_head_handler.
+* rest/network.c: Added rest_network_head_handler.
+*				: Added create_response.
+*				 (rest_network): Renamed rest_network_get_handler.
+* rest/network.h: Added rest_network_head_handler.
+* net/tcp (tcp_sent_cb): Check if connection is NULL.
+
 
 
 2015-06-29 Martin Grønholdt
